--- a/styles.css
+++ b/styles.css
@@ -23,8 +23,9 @@ body{
 .sidebar{
     border-right: 1px solid var(--primary-color);
     flex: 0.2;
-    min-width: 250px;
+    min-width: 100px;
     margin-top: 20px;
+    overflow-y: scroll;
 }
 
 .sidebar .fa-twitter{
