--- a/tweetbox.css
+++ b/tweetbox.css
@@ -21,6 +21,12 @@
 
 }
 
+.feed_header h2{ 
+    font-size: 20px;
+    font-weight: 800;
+ }
+
+
 .feed_header .right-side-icon{
     float: right;
 }
