--- a/tweetbox.css
+++ b/tweetbox.css
@@ -18,7 +18,6 @@
     z-index: 100;
     border: 1px solid var(--primary-color);
     padding: 15px 20px;
-
 }
 
 .feed_header h2{ 
@@ -26,7 +25,28 @@
     font-weight: 800;
  }
 
+ .feed::-webkit-scrollbar{
+    display: none;
+ }
+
+ .feed {
+    -ms-overflow-style: none;
+    scrollbar-width: none;
+ }
+
 
 .feed_header .right-side-icon{
     float: right;
+}
+
+/* tweetbox */
+
+.tweetbox{
+padding-bottom: 10px;
+border-bottom: 8px solid var(--primary-color);
+}
+
+.tweetbox_input img{
+    height: 50px;
+    border-radius: 50%;
 }
