--- a/tweetbox.css
+++ b/tweetbox.css
@@ -23,6 +23,7 @@
 .feed_header h2 {
   font-size: 20px;
   font-weight: 800;
+  cursor: pointer;
 }
 
 .feed::-webkit-scrollbar {
@@ -41,11 +42,45 @@
 /* tweetbox */
 
 .tweetbox {
-  padding-bottom: 10px;
-  border-bottom: 8px solid var(--primary-color);
+  padding: 4px 10px 4px 10px;
+  border-bottom: 2px solid var(--primary-color);
+}
+
+.tweetbox form {
+  display: flex;
+  flex-direction: column;
+}
+
+.tweetbox_input {
+  display: flex;
+  padding: 18px;
+  flex-direction: row;
 }
 
 .tweetbox_input img {
   height: 50px;
   border-radius: 50%;
+  cursor: pointer;
+}
+
+.tweetbox_input input {
+  flex: 1;
+  margin-left: 20px;
+  font-size: 20px;
+  border: none;
+  outline: none;
+}
+
+.tweetButton {
+  background-color: var(--secondary-color);
+  border: none;
+  border-radius: 30px;
+  font-family: inherit;
+  font-weight: 900;
+  color: white;
+  width: 80px;
+  height: 40px;
+  margin-top: 20px;
+  margin-left: auto;
+  display: inherit;
 }
